@@ -1,3 +1,8 @@
+2009-07-09  Ian Lance Taylor  <iant@google.com>
+
+	* merge.cc (Object_merge_map::initialize_input_to_output_map):
+	Reserve space in the hash table.
+
 2009-07-06  Mikolaj Zalewski  <mikolajz@google.com>
 
 	* fileread.cc (File_read::get_mtime): New method.
